--- a/jsnack14.html
+++ b/jsnack14.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <button onclick="setTimeout (punteggio, 50);">Verifica il tuo punteggio:</button>
 
     <script src="jsnack14.js">
 
